--- a/src/main/resources/templates/admin/purchaselist.html
+++ b/src/main/resources/templates/admin/purchaselist.html
@@ -118,8 +118,10 @@
                                          <div class="btn-group">
                                          <td>
                                          <div>
+                                         <span>
                                          <a class="btn btn-warning" th:href="'/dashboard/admin/updatePurchase/'+${p.id}"><i class="icon_pencil-edit_alt"></i></a>
                                          <a class="btn btn-primary" th:href="'/dashboard/admin/downloadPurchaseInvoice/'+${p.id}">   <i class="icon_printer"></i></a>
+                                        </span>
                                          </div>
                                          </td>
                                          </div>
