--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -34,6 +34,7 @@
                     <li><a class="" th:href="@{/dashboard/admin/addpurchase}">Add Purchase</a></li>
                     <li><a class="" th:href="@{/dashboard/admin/addsales}">Add Sales</a></li>
                     <li><a class="" th:href="@{/addItem}">Add Item</a></li>
+                     <li><a class="" th:href="@{/dashboard/admin/addcategory}">Add Category</a></li>
                     <!--<li><a class="" href="form_component.html">Add VendorPurchase</a></li>-->
 
                 </ul>
@@ -49,6 +50,7 @@
                     <li><a class="" th:href="@{/userlist}">User List</a></li>
                     <li><a class="" th:href="@{/dashboard/admin/purchaseList}">Purchase List</a></li>
                     <li><a class="" th:href="@{/saleslist}">Sales List</a></li>
+                    <li><a class="" th:href="@{/categorylist}">Categories List</a></li>
                     <!--<li><a class="" href="grids.html">Vendor Purchaselist</a></li>-->
                     <!--<li><a class="" href="grids.html">Numbering List</a></li>-->
                 </ul>
