--- a/src/main/resources/templates/admin/categorieslist.html
+++ b/src/main/resources/templates/admin/categorieslist.html
@@ -9,7 +9,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>List of Sales</title>
+  <title>List of Categories</title>
 
   <!-- Bootstrap CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -36,19 +36,6 @@
         <link th:href="@{/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css}" rel="stylesheet">
         <link th:href="@{/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css}" rel="stylesheet">
 
-          <!-- Bootstrap -->
-          <!--   <link th:href="@{/vendors/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet"> -->
-            <!-- Font Awesome -->
-         <!--    <link th:href="@{/vendors/font-awesome/css/font-awesome.min.css}" rel="stylesheet"> -->
-
-
-    <!-- =======================================================
-      Theme Name: NiceAdmin
-      Theme URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-      Author: BootstrapMade
-      Author URL: https://bootstrapmade.com
-    ======================================================= -->
-    <!--gfkfkurckuuyrkttckuycuyktkuyxxdjytkuyvfyvukykuykuykuyyukvuykuy      -->
 </head>
 
 <body>
@@ -68,7 +55,7 @@
       <section class="wrapper">
 
         <!-- page start-->
-     <h1>List of Sales</h1>
+     <h1>List of Categories</h1>
 
 
           <div class="x_content">
@@ -77,28 +64,24 @@
           <table id="datatable" class="table table-striped table-bordered">
               <thead>
                 <tr>
-                    <th>Customer Name</th>
-                    <th>Sales Date</th>
-                    <th>Rate</th>
-                    <th>Quantity</th>
-                    <th>Price</th>
-                    <th>Actions</th>
+                    <th>Category Id</th>
+                    <th>Category Name</th>
+                       <th>Actions</th>
+
 
                 </tr>
               </thead>
 
           <tbody>
 
-          <tr th:each="s:${sales}">
-              <td th:text="${s.customername}"></td>
-              <td th:text="${s.date}"></td>
-              <td th:text="${s.rate}"></td>
-              <td th:text="${s.quantity}"></td>
-              <td th:text="${s.price}"></td>
+          <tr th:each="category:${categories}">
+                <td th:text="${category.id}"></td>
+                <td th:text="${category.name}"></td>
+
               <td sec:authorize="hasAuthority('ADMIN')">
               <div  class="btn-group">
-              <a th:href="@{/sales/findbyid/(id=${s.id})}" class="btn btn-primary" id="editButton">Edit</a>
-              <a th:href="@{/sales/delete/(id=${s.id})}" class="btn btn-danger" id="deleteButton">Delete</a>
+              <a th:href="@{/sales/findbyid/(id=${category.id})}" class="btn btn-primary" id="editButton">Edit</a>
+              <a th:href="@{/sales/delete/(id=${category.id})}" class="btn btn-danger" id="deleteButton">Delete</a>
 
 
               </div>
