--- a/src/main/resources/templates/admin/userlist.html
+++ b/src/main/resources/templates/admin/userlist.html
@@ -26,6 +26,71 @@
   <link href="/css/style.css" rel="stylesheet">
   <link href="/css/style-responsive.css" rel="stylesheet" />
 
+  <style>
+  /* The switch - the box around the slider */
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+
+  .slider.round:before {
+    border-radius: 50%;
+  }
+</style>
+
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
   <!--[if lt IE 9]>
       <script src="/js/html5shiv.js"></script>
@@ -75,7 +140,7 @@
 
                             <th>Profile Image</th>
                             <th>Role</th>
-                            <th sec:authorize="hasAuthority('ADMIN')" >Actions</th>
+                            <th sec:authorize="hasAuthority('ADMIN')" >Edit</th>
                              <!--<th>Edit</th>-->
                             <!-- <th>Delete</th>-->
                             <th>Is Enabled</th>
@@ -98,26 +163,25 @@
                       <td sec:authorize="hasAuthority('ADMIN')">
                         <div  class="btn-group">
                          <a th:href="@{/users/findbyid/(id=${user.id})}" class="btn btn-primary" id="editButton">Edit</a>
-                         <a th:href="@{/delete/{id}(id=${user.email})}" class="btn btn-danger" id="deleteButton">Delete</a>
+                        <!-- <a th:href="@{/delete/{id}(id=${user.email})}" class="btn btn-danger" id="deleteButton">Delete</a>-->
 
                         </div>
                       </td>
-                      <td th:text ="${user.enabled}"></td>
+                      <!--<td th:text ="${user.enabled}"></td>-->
                       <td>
                       <div class="form-group">
-                                     <label for="recipient-name" class="col-form-label"> Is Enabled:</label>
-                                     <input type="checkbox" data-toggle="toggle" data-on="Enabled" data-off="Disabled">
-                                     <input type="checkbox" id="toggle-two">
-                                     <script>
-                                       $(function() {
-                                         $('#toggle').bootstrapToggle({
-                                           on: 'Enabled',
-                                           off: 'Disabled'
-                                         });
-                                       })
-                                     </script>
-                                   </div>
-</td>
+                         <!--<label for="recipient-name" class="col-form-label"></label>-->
+                            <label class="switch">
+
+
+                              <input type="checkbox" name="active" id="enablebutton" th:checked="${user.enabled}" th:href="@{/user/enable/{id}(id=${user.id})}" />
+
+                                   <!-- <span>${user.id}</span>-->
+
+                              <span class="slider round"></span>
+                             </label>
+                       </div>
+                      </td>
                       <!--<td><a href="" class="btn btn-warning">Edit</a></td>-->
                       <!-- <td><a href="" class="btn btn-danger">Delete</a></td>-->
                   </tr>
@@ -188,6 +252,8 @@
                  })
                </script>
              </div>
+             <!-- Rounded switch -->
+
 
             <div class="form-group">
                  <button type="submit" class="btn btn-primary">Submit</button>
@@ -223,6 +289,27 @@
       </div>
     </div>
   </div>
+
+
+    <div class="modal" id="enablemodal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title text-danger font-weight-bold" >Enable/Disable User</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Are you sure you want to change the status of user?</p>
+          </div>
+          <div class="modal-footer">
+            <a  class="btn btn-primary" id="confirmenabledbutton">Yes</a>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          </div>
+        </div>
+      </div>
+    </div>
   <!-- javascripts -->
   <script src="/js/jquery.js"></script>
   <script src="/js/bootstrap.min.js"></script>
