--- a/src/main/resources/templates/admin/addpurchase.html
+++ b/src/main/resources/templates/admin/addpurchase.html
@@ -145,6 +145,7 @@
                                                     <th>Item Name</th>
                                                     <th>Item Rate</th>
                                                     <th>Item Quantity</th>
+
                                                 </tr>
                                                 </thead>
                                                 <tbody>
@@ -162,11 +163,9 @@
                                                     </td>
 
 
-                                                    <td><input type="text" required="required" name="orderedItems[0].itemRate"/>
+                                                    <td><input type="text" id="rate" required="required" name="orderedItems[0].itemRate"/>
 
-                                                    <td><input type="text" required="required" name="orderedItems[0].quantity"/>
-
-
+                                                    <td><input type="text" id="qty" required="required" name="orderedItems[0].quantity" onchange="calculate()"/>
 
 
                                                 </tr>
@@ -180,7 +179,7 @@
                                                 <button type="button" class="btn btn-danger btn-md btn-action minus">-</button>
                                             </div>
                                         </div>
-                                        </div>
+
 
 
                                         <!--<div class="col-md-2 col-sm-2 col-xs-12">-->
@@ -217,12 +216,35 @@
                                         <input type="radio" name="paymentMethod" value="partial"> Partial <br>
                                     </div>
                                 </div>-->
-
+<!--
                                 <div class="form-group">
                                     <label class="control-label col-md-3 col-sm-3 col-xs-12" for="amountPaid">Amount Paid:  <span class="required">*</span>
                                     </label>
                                     <div class="col-md-6 col-sm-6 col-xs-12">
                                         <input type="number" th:field="*{amountPaid}" required="required" class="form-control col-md-7 col-xs-12">
+                                    </div>
+                                </div>
+                                -->
+                                <div class="form-group">
+                                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="totalamount">Total Amount:  <span class="required">*</span>
+                                    </label>
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        <input type="number" id="totalamount" th:field="*{totalPrice}" required="required" class="form-control col-md-7 col-xs-12">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="amountPaid">Amount Paid:  <span class="required">*</span>
+                                    </label>
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        <input type="number"id="amountpaid" th:field="*{amountPaid}" required="required" class="form-control col-md-7 col-xs-12" onchange="remainingamount()"/>
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="remainingAmount">Remaining Amount:  <span class="required">*</span>
+                                    </label>
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        <input type="number" id="remainingamount" th:field="*{remainingAmount}" required="required" class="form-control col-md-7 col-xs-12">
                                     </div>
                                 </div>
 
@@ -231,7 +253,6 @@
                                     </label>
                                     <div class="col-md-6 col-sm-6 col-xs-12">
                                         <select th:field="*{paymentType}" class="form-control" onchange="ShowDiv(this.value)" >
-
                                             <option value="1">Bank Cheque</option>
                                             <option value="2">Cash Payment</option>
                                             <option value="2">Bank Deposit Slip</option>
@@ -280,7 +301,7 @@
                                 <div class="ln_solid"></div>
                                 <div class="form-group">
                                     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                        <button class="btn btn-primary" type="button">Cancel</button>
+
                                         <button class="btn btn-primary" type="reset">Reset</button>
                                         <button type="submit" class="btn btn-success">Submit</button>
                                     </div>
@@ -299,71 +320,15 @@
     </div>
 
 
-
-    <!-- jQuery -->
-    <script th:src="@{/vendors/jquery/dist/jquery.min.js}"></script>
-    <!-- Bootstrap -->
-    <script th:src="@{/vendors/bootstrap/dist/js/bootstrap.min.js}"></script>
-    <!-- FastClick -->
-    <script th:src="@{/vendors/fastclick/lib/fastclick.js}"></script>
-    <!-- NProgress -->
-    <script th:src="@{/vendors/nprogress/nprogress.js}"></script>
-    <!-- Chart.js -->
-    <script th:src="@{/vendors/Chart.js/dist/Chart.min.js}"></script>
-    <!-- gauge.js -->
-    <script th:src="@{/vendors/gauge.js/dist/gauge.min.js}"></script>
-    <!-- bootstrap-progressbar -->
-    <script th:src="@{/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js}"></script>
-    <!-- iCheck -->
-    <script th:src="@{/vendors/iCheck/icheck.min.js}"></script>
-    <!-- Skycons -->
-    <script th:src="@{/vendors/skycons/skycons.js}"></script>
-    <!-- Flot -->
-    <script th:src="@{/vendors/Flot/jquery.flot.js}"></script>
-    <script th:src="@{/vendors/Flot/jquery.flot.pie.js}"></script>
-    <script th:src="@{/vendors/Flot/jquery.flot.time.js}"></script>
-    <script th:src="@{/vendors/Flot/jquery.flot.stack.js}"></script>
-    <script th:src="@{/vendors/Flot/jquery.flot.resize.js}"></script>
-    <!-- Flot plugins -->
-    <script th:src="@{/vendors/flot.orderbars/js/jquery.flot.orderBars.js}"></script>
-    <script th:src="@{/vendors/flot-spline/js/jquery.flot.spline.min.js}"></script>
-    <script th:src="@{/vendors/flot.curvedlines/curvedLines.js}"></script>
-    <!-- DateJS -->
-    <script th:src="@{/vendors/DateJS/build/date.js}"></script>
-    <!-- JQVMap -->
-    <script th:src="@{/vendors/jqvmap/dist/jquery.vmap.js}"></script>
-    <script th:src="@{/vendors/jqvmap/dist/maps/jquery.vmap.world.js}"></script>
-    <script th:src="@{/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js}"></script>
-    <!-- bootstrap-daterangepicker -->
-    <script th:src="@{/vendors/moment/min/moment.min.js}"></script>
-    <script th:src="@{/vendors/bootstrap-daterangepicker/daterangepicker.js}"></script>
-
-
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
-    <script type="text/javascript">
-
-    </script>
-
-    <!-- Custom Theme Scripts -->
-    <script th:src="@{/js/custom.min.js}"></script>
-
-
-    <!--Datatables-->
-    <script th:src="@{/vendors/datatables.net/js/jquery.dataTables.min.js}"></script>
-    <script th:src="@{/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js}"></script>
-    <script th:src="@{/vendors/datatables.net-buttons/js/dataTables.buttons.min.js}"></script>
-    <script th:src="@{/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js}"></script>
-    <script th:src="@{/vendors/datatables.net-buttons/js/buttons.flash.min.js}"></script>
-    <script th:src="@{/vendors/datatables.net-buttons/js/buttons.html5.min.js}"></script>
-    <script th:src="@{/vendors/datatables.net-buttons/js/buttons.print.min.js}"></script>
-    <script th:src="@{/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js}"></script>
-    <script th:src="@{/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js}"></script>
-    <script th:src="@{/vendors/datatables.net-responsive/js/dataTables.responsive.min.js}"></script>
-    <script th:src="@{/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js}"></script>
-    <script th:src="@{/vendors/datatables.net-scroller/js/dataTables.scroller.min.js}"></script>
-    <script th:src="@{/vendors/jszip/dist/jszip.min.js}"></script>
-    <script th:src="@{/vendors/pdfmake/build/pdfmake.min.js}"></script>
-    <script th:src="@{/vendors/pdfmake/build/vfs_fonts.js}"></script>
+  <!-- container section end -->
+  <!-- javascripts -->
+      <script src="/js/jquery.js"></script>
+      <script src="/js/bootstrap.min.js"></script>
+  <!-- nice scroll -->
+  <script src="/js/jquery.scrollTo.min.js"></script>
+  <script src="/js/jquery.nicescroll.js" type="text/javascript"></script>
+  <!--custome script for all page-->
+  <script src="/js/scripts.js"></script>
     <!--Datatables end-->
 <script>
         //Clone Table
@@ -443,6 +408,30 @@
 
                });
     </script>
+
+                     <script>
+
+                        function calculate() {
+                        var qty = document.getElementById('qty').value;
+                        var rate = document.getElementById('rate').value;
+                        var result = qty * rate;
+                        document.getElementById('totalamount').value = result;
+
+
+                    }
+                    </script>
+
+
+                    <script>
+                    function remainingamount() {
+
+
+                         var totalamount = document.getElementById('totalamount').value;
+                         var amountpaid= document.getElementById('amountpaid').value;
+                         var remainingamount=totalamount-amountpaid;
+                         document.getElementById('remainingamount').value=remainingamount;
+                         }
+                    </script>
 
 
     <!--<script>-->
