--- a/src/main/resources/templates/admin/saleslist.html
+++ b/src/main/resources/templates/admin/saleslist.html
@@ -77,7 +77,9 @@
           <table id="datatable" class="table table-striped table-bordered">
               <thead>
                 <tr>
+                    <th>Invoice No </th>
                     <th>Customer Name</th>
+                    <th>Sold Items</th>
                     <th>Sales Date</th>
                     <th>Rate</th>
                     <th>Quantity</th>
@@ -90,7 +92,9 @@
           <tbody>
 
           <tr th:each="s:${sales}">
+               <td th:text="${s.invoiceno}"></td>
               <td th:text="${s.customername}"></td>
+              <td th:text="${s.solditems}"></td>
               <td th:text="${s.date}"></td>
               <td th:text="${s.rate}"></td>
               <td th:text="${s.quantity}"></td>
