working till update purchase

--- a/src/main/resources/templates/admin/addpurchase.html
+++ b/src/main/resources/templates/admin/addpurchase.html
@@ -425,11 +425,11 @@
                     <script>
                     function remainingamount() {
 
-
+                            alert("hi hello");
                          var totalamount = document.getElementById('totalamount').value;
                          var amountpaid= document.getElementById('amountpaid').value;
-                         var remainingamount=totalamount-amountpaid;
-                         document.getElementById('remainingamount').value=remainingamount;
+                         var rem=totalamount-amountpaid;
+                         document.getElementById('remainingamount').value=rem;
                          }
                     </script>
 
